--- a/client/app.component.html
+++ b/client/app.component.html
@@ -2,10 +2,10 @@
 <div class="row">
     <div class="col-md-6">
         <!--<h1>Hello Angular2-Meteor!</h1>-->
-        <app-admin-panel></app-admin-panel>
+        <app-admin-panel [data]="right"></app-admin-panel>
     </div>
     <div class="col-md-6 verticalLine">
         <!--<h1>Hello Angular2-Meteor!</h1>-->
-        <app-admin-panel></app-admin-panel>
+        <app-admin-panel [data]="left"></app-admin-panel>
     </div>
 </div>
