--- a/client/imports/admin-panel/admin-panel.component.html
+++ b/client/imports/admin-panel/admin-panel.component.html
@@ -13,6 +13,7 @@
   <app-state-info></app-state-info>
     
   <app-state-switchers></app-state-switchers>
+  <!--<p *ngFor="let game of games">{{game | json}}</p>-->
   <app-games-grid [games]="games"></app-games-grid>
   <app-main-actions></app-main-actions>
     <br />
