--- a/client/imports/admin-panel/main-actions/main-actions.component.html
+++ b/client/imports/admin-panel/main-actions/main-actions.component.html
@@ -3,16 +3,19 @@
 
     <div class="col-xs-8 left">
       <button class="btn btn-img" id="steam"
-              (click)="remote.restartSteam()">
+              (click)="steam()">
         <img class="right-bottom-img" src="./img/reload-icon-hi copy.png" alt="">
       </button>
-      <button class="btn btn-img" id="vr">
+      <button class="btn btn-img" id="vr"
+              (click)="vr()">
         <img class="right-bottom-img" src="./img/reload-icon-hi copy.png" alt="">
       </button>
-      <button class="btn btn-img" id="music">
+      <button class="btn btn-img" id="music"
+              (click)="music()">
         <img class="right-bottom-img" src="./img/pause.png" alt="">
       </button>
-      <button class="btn btn-img" id="video">
+      <button class="btn btn-img" id="video"
+              (click)="video()">
         <img class="right-bottom-img" src="./img/pause.png" alt="">
       </button>
     </div>
