--- a/client/imports/admin-panel/state-info/state-info.component.html
+++ b/client/imports/admin-panel/state-info/state-info.component.html
@@ -14,7 +14,7 @@
 
   <div class="col-md-2 col-sm-2 col-xs-2">
     <div class="names">
-      <p *ngFor="let player of session.players">{{player.name}}</p>
+      <p *ngFor="let player of session.current.players">{{player.name}}</p>
     </div>
   </div>
 
