--- a/client/imports/admin-panel/admin-panel.component.html
+++ b/client/imports/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!showSettings" class="main">
+<div *ngIf="!service.showSettings" class="main">
      <!--Add here for non selection-->
      <!--style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"-->
      <!--unselectable="on"-->
@@ -11,31 +11,17 @@
   <app-player-login></app-player-login>
 
   <app-state-info></app-state-info>
-    
+
   <app-state-switchers></app-state-switchers>
   <!--<p *ngFor="let game of games">{{game | json}}</p>-->
   <app-games-grid [games]="games"></app-games-grid>
   <app-main-actions></app-main-actions>
     <br />
     <br />
-    <button class="btn btn-default" (click)="showSettings = !showSettings">settings</button>
+    <button class="btn btn-default" (click)="service.showSettings = !service.showSettings">settings</button>
 </div>
-<div *ngIf="showSettings" class="settings">
-    <button class="btn btn-default" (click)="showSettings = !showSettings">back</button>
-    <div *ngFor="let game of games">
-        <label>{{game.name}}</label>
-        <div class="row">
-
-            <div class="col-md-8 col-sm-8 col-xs-8">
-                <input type="text" [(ngModel)]="game.app" name="app">
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-4">
-                <button class="btn btn-default"  (click)="saveGame(game)">save</button>
-            </div>
-
-        </div>
-        <!--<p>{{game.app}}</p>-->
-    </div>
+<div *ngIf="service.showSettings" class="settings">
+    <app-settings>Load</app-settings>
 </div>
 
 <!--<div class="footer">-->
