--- a/client/imports/admin-panel/admin-panel.component.html
+++ b/client/imports/admin-panel/admin-panel.component.html
@@ -11,15 +11,15 @@
   <app-player-login></app-player-login>
 
   <app-state-info></app-state-info>
-
+  <app-session-log></app-session-log>
   <app-state-switchers></app-state-switchers>
-  <!--<p *ngFor="let game of games">{{game | json}}</p>-->
   <app-games-grid [games]="games"></app-games-grid>
   <app-main-actions></app-main-actions>
-    <br />
-    <br />
-    <button class="btn btn-default" (click)="service.showSettings = !service.showSettings">settings</button>
+  <br />
+  <br />
+  <button class="btn btn-default" (click)="service.showSettings = !service.showSettings">settings</button>
 </div>
+
 <div *ngIf="service.showSettings" class="settings">
     <app-settings>Load</app-settings>
 </div>
