--- a/client/imports/admin-panel/settings/settings.component.html
+++ b/client/imports/admin-panel/settings/settings.component.html
@@ -7,18 +7,17 @@
   </div>
 </div>
 
-<div class="container">
-    <br>
+<!-- <div class="container"> -->
+    <!-- <br /> -->
 
-<label class="stg">Steam ID</label>
-<input class="stg" type="text">
-    <br>
+    <!-- <label class="stg">Steam ID</label> -->
+    <!-- <input class="stg" type="text"> -->
+        <!-- <br /> -->
 
-    <label class="stg">Remote IP address</label>
-<input class="stg" type="text">
-</div>
-<br>
-
+        <!-- <label class="stg">Remote IP address</label> -->
+    <!-- <input class="stg" type="text"> -->
+<!-- </div> -->
+<!-- <br /> -->
 
 <div *ngFor="let game of gamesService.games">
     <div class="row">
