--- a/client/imports/admin-panel/main-actions/main-actions.component.html
+++ b/client/imports/admin-panel/main-actions/main-actions.component.html
@@ -41,13 +41,20 @@
 </div>
 <br />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
+              <button 
+              class="btn btn-default" 
+              [ngClass]="{'selected': session.adminMode}"
+              (click)="adminModeToggle()">
+              Admin Mode</button>
+    </div>
+    <div class="col-md-3">
               <button class="btn btn-default" (click)="fullScreen()">Full Screen</button>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
               <button class="btn btn-default" (click)="killAll()">Kill All</button>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
               <button class="btn btn-default" (click)="service.showSettings = !service.showSettings">settings</button>
     </div>
 </div>
