--- a/client/app.component.css
+++ b/client/app.component.css
@@ -1,11 +1,15 @@
 
 body {
   background-color: #252525;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif !important;
   width: 100%;
   height: 300px;
   /*overflow-y: scroll;*/
 
+}
+
+label {
+  font-weight: 300;
 }
 
 * {
