--- a/client/imports/admin-panel/settings/settings.component.html
+++ b/client/imports/admin-panel/settings/settings.component.html
@@ -20,7 +20,7 @@
 <!-- <br /> -->
 
 <div *ngFor="let game of gamesService.allGames">
-    <div class="row">
+    <div class="row setting-row">
         <div class="col-md-4 col-sm-4 col-xs-4">
           <img class="logo" src={{game.logo_big}} onerror="this.src='./img/game_no_img.gif'" width="100%" height="150%" alt="">
         </div>
