--- a/client/imports/admin-panel/settings/settings.component.html
+++ b/client/imports/admin-panel/settings/settings.component.html
@@ -7,17 +7,17 @@
   </div>
 </div>
 
-<!-- <div class="container"> -->
-    <!-- <br /> -->
+<div class="container">
+    <br />
 
     <!-- <label class="stg">Steam ID</label> -->
     <!-- <input class="stg" type="text"> -->
         <!-- <br /> -->
 
-        <!-- <label class="stg">Remote IP address</label> -->
-    <!-- <input class="stg" type="text"> -->
-<!-- </div> -->
-<!-- <br /> -->
+    <label class="stg">Remote IP address</label>
+    <input class="stg" type="text" [(ngModel)]="service.data.host" (ngModelChange)="saveHost(service.data, $event)">
+</div>
+<br />
 
 <div *ngFor="let game of gamesService.allGames">
     <div class="row setting-row">
